fix(BubbleModule): change "getFirst" to "get(0)"